--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -75,9 +75,12 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+section{
+    margin-top: 130px;
+}
 /* About section styles */
 .about{
-    margin-top: 130px;
+    
     background: #FFF8F3;
 border-radius: 10px;
 padding:130px 150px;
@@ -85,7 +88,7 @@ padding:130px 150px;
 }
 .section-title{
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     font-size: 35px;
     font-weight: 700;
 
@@ -110,4 +113,80 @@ justify-content: space-around;
     font-weight: 400;
     font-size: 20px;
     color: #757575;
+}
+/* What i do styles */
+.what-i-do{
+    
+    text-align: center;
+}
+.skills-container{
+    display:flex;
+    gap:24px;
+
+}
+.skills{
+    background: #FFFFFF;
+box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
+padding: 30px;
+}
+.skill-title{
+    font-weight: 700px;
+    font-weight: 20;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    color:#757575;
+}
+/* Resume styles */
+.resume-content{
+display : flex;
+}
+.resume-item{
+    margin: 30px;
+    margin-bottom: 30px;
+}
+.resume .title{
+font-weight:700;
+font-size: 25px;
+color: #474747;
+margin-bottom: 10px;
+
+
+}
+.resume .sub-title{
+color:#757575;
+font-weight: 600;
+font-size: 20px;
+margin-bottom: 20px;
+}
+.resume .description{
+    color:#757575
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+/*Contact styles*/
+.contact{
+    display:flex;
+    gap:100px;
+    background-color:#FFF8F3;
+    padding: 130px 200px;
+}
+.contact .section-title{
+    text-align: left;
+}
+.contact input[type="text"],[type="email"],textarea{
+    margin-bottom: 24px;
+    border: 0;
+    padding:18px 30px;
+    width: 100%;
+}
+input{
+    height: 64px;
+}
+.contact a{
+    text-decoration: none;
 }
